...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnAddContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:backgroundTint="@color/green"
            android:contentDescription="@string/add_item_button"
            android:src="@drawable/ic_add"
...
